Add imports to dashboard nb

--- a/Code/Python/dashboard.ipynb
+++ b/Code/Python/dashboard.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from ipywidgets import FloatSlider, HBox, VBox, Dropdown, Box, GridspecLayout, Layout\n",
+    "import bqplot.pyplot as plt\n",
+    "from bqplot import Axis, LinearScale\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "import pickle\n",
+    "import yaml"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
